--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="how to make a twitter clone  how to use html and css n twitter clone">
     <meta property="og:title" content="twitter clone">
 <meta property="og:type" content="article of amitaab bacchan">
-<meta property="og:image" content="https://github.com/tvaishali12/Twitter-Clone/blob/master/index.html/images/Pl_u58Pb_400x400.jpg">
+<meta property="og:image" content="https://github.com/tvaishali12/Twitter-Clone/blob/master/images/Pl_u58Pb_400x400.jpg">
 <meta property="og:url" content="https://github.com/tvaishali12/Twitter-Clone/blob/master/index.html">
     <title>twitter clone</title>
     <link rel="stylesheet" href="style.css">
