--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="how to make a twitter clone  how to use html and css n twitter clone">
     <meta property="og:title" content="twitter clone">
 <meta property="og:type" content="article of amitaab bacchan">
-<meta property="og:image" content="https://github.com/tvaishali12/Twitter-Clone/blob/master/images/Pl_u58Pb_400x400.jpg">
-<meta property="og:url" content="https://github.com/tvaishali12/Twitter-Clone/blob/master/index.html">
+<meta property="og:image" content="https://tvaishali12.github.io/Twitter-Clone/images/Pl_u58Pb_400x400.jpg">
+<meta property="og:url" content="https://tvaishali12.github.io/Twitter-Clone/">
     <title>twitter clone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
