--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta  name="description" content="this is a clone of twitter website">
+    <meta  name="description" content="this is the clone of twitter website">
     <meta name="keywords" content="how to make a twitter clone  how to use html and css n twitter clone">
     <meta property="og:title" content="twitter clone">
 <meta property="og:type" content="article of amitaab bacchan">
